# coretran

./: .gitignore  Docs.md  LICENSE  README.md  citation.cff  fpm.toml
docs/: index.html  search.html
docs/interface/: allocate.html  arange.html  argheapsort.html  arginsertionsort.html  argintrosort.html  argmedianof3.html  argmergesort.html  argpartition.html  argquickselect.html  argselect.html  argsort.html  binarysearch.html  binarysearch_wneighbours.html  compactreal.html  compare.html  copy.html  crossproduct.html  cumprod.html  cumsum.html  dargdynamicarray.html  ddynamicarray.html  deallocate.html  deallocate_branch.html  deallocate_kdtree.html  debug.html  diff.html  fasttwodiff.html  fasttwosum.html  geometricmean.html  heapsort.html  iargdynamicarray.html  idargdynamicarray.html  iddynamicarray.html  idynamicarray.html  init2d_kdtree.html  init_branch.html  init_kdtreesearch.html  insertionsort.html  intervalsearch.html  introsort.html  (+44 more)
docs/lists/: files.html  modules.html  procedures.html  programs.html  types.html
docs/module/: dargdynamicarray_class.html  ddynamicarray_class.html  formatting.html  iargdynamicarray_class.html  idargdynamicarray_class.html  iddynamicarray_class.html  idynamicarray_class.html  m_allocate.html  m_array1d.html  m_binarysearch.html  m_compare.html  m_copy.html  m_dargdynamicarray.html  m_ddynamicarray.html  m_deallocate.html  m_debugging.html  m_dynamicarray.html  m_errors.html  m_fileio.html  m_fixedarrays.html  m_iargdynamicarray.html  m_idargdynamicarray.html  m_iddynamicarray.html  m_idynamicarray.html  m_indexing.html  m_kdtree.html  m_maths.html  m_medianof3.html  m_parameters.html  m_partition.html  m_partition3way.html  m_quickselect.html  m_random.html  m_rargdynamicarray.html  m_rdynamicarray.html  m_readline.html  m_reallocate.html  m_rnglib.html  m_searching.html  m_select.html  (+18 more)
docs/proc/: abstimetohms.html  advance_state.html  allocate_c1d.html  allocate_c2d.html  allocate_c3d.html  allocate_d1d.html  allocate_d2d.html  allocate_d3d.html  allocate_i1d.html  allocate_i2d.html  allocate_i3d.html  allocate_id1d.html  allocate_id2d.html  allocate_id3d.html  allocate_l1d.html  allocate_l2d.html  allocate_l3d.html  allocate_r1d.html  allocate_r2d.html  allocate_r3d.html  allocate_test.html  allocate_z1d.html  allocate_z2d.html  allocate_z3d.html  antithetic_get.html  antithetic_memory.html  antithetic_set.html  appendstring.html  argmedianof3_d1d.html  argmedianof3_i1d.html  argmedianof3_id1d.html  argmedianof3_r1d.html  array1d_test.html  binarysearch_d1d.html  binarysearch_i1d.html  binarysearch_id1d.html  binarysearch_r1d.html  binarysearch_wneighbours_d1d.html  binarysearch_wneighbours_i1d.html  binarysearch_wneighbours_id1d.html  (+277 more)
docs/program/: scaletest_coretran.html  test_coretran.html
docs/sourcefile/: dargdynamicarray_class.f90.html  ddynamicarray_class.f90.html  iargdynamicarray_class.f90.html  idargdynamicarray_class.f90.html  iddynamicarray_class.f90.html  idynamicarray_class.f90.html  m_allocate.f90.html  m_argdynamicarray.f90.html  m_array1d.f90.html  m_binarysearch.f90.html  m_compare.f90.html  m_copy.f90.html  m_dargdynamicarray.f90.html  m_ddynamicarray.f90.html  m_deallocate.f90.html  m_debugging.f90.html  m_dynamicarray.f90.html  m_errors.f90.html  m_fileio.f90.html  m_fixedarray.f90.html  m_floydrivest.f90.html  m_format.f90.html  m_iargdynamicarray.f90.html  m_idargdynamicarray.f90.html  m_iddynamicarray.f90.html  m_idynamicarray.f90.html  m_indexing.f90.html  m_kdtree.f90.html  m_maths.f90.html  m_medianof3.f90.html  m_random.f90.html  (+30 more)
documentation/: Docs.md
myCMakeFiles/: FortranEnvironment.cmake
src/: CMakeLists.txt
src/arrays/: CMakeLists.txt  m_array1D.f90  sm_array_d1D.f90  sm_array_d1D.f95  sm_array_i1D.f90  sm_array_i1D.f95  sm_array_id1D.f90  sm_array_id1D.f95  sm_array_r1D.f90  sm_array_r1D.f95
src/core/: CMakeLists.txt  m_allocate.f90  m_copy.f90  m_deallocate.f90  m_errors.f90  m_format.f90  m_indexing.f90  m_parameters.f90  m_partition.f90  m_reallocate.f90  m_strings.f90  m_swap.f90  m_unitTester.f90  m_write.f90  sm_partition.f90
src/dynamicArrays/: CMakeLists.txt  dArgDynamicArray_Class.f90  dDynamicArray_Class.f90  iArgDynamicArray_Class.f90  iDynamicArray_Class.f90  idArgDynamicArray_Class.f90  idDynamicArray_Class.f90  m_dArgDynamicArray.f90  m_dDynamicArray.f90  m_dynamicArray.f90  m_iArgDynamicArray.f90  m_iDynamicArray.f90  m_idArgDynamicArray.f90  m_idDynamicArray.f90  m_rArgDynamicArray.f90  m_rDynamicArray.f90  rArgDynamicArray_Class.f90  rDynamicArray_Class.f90  sm_dDynamicArray.f90  sm_iDynamicArray.f90  sm_idDynamicArray.f90  sm_rDynamicArray.f90
src/maths/: CMakeLists.txt  m_maths.f90  sm_maths_d1D.f90  sm_maths_d1D.f95  sm_maths_i1D.f90  sm_maths_i1D.f95  sm_maths_id1D.f90  sm_maths_id1D.f95  sm_maths_r1D.f90  sm_maths_r1D.f95
src/random/: CMakeLists.txt  Prng_Class.f90  m_random.f90  sm_rngChiSq.f90  sm_rngExponential.f90  sm_rngGamma.f90  sm_rngInteger.f90  sm_rngNormal.f90  sm_rngUniform.f90  sm_rngWeibull.f90  sm_shuffle.f90  sm_shuffle.f95  sm_xorshift1024star.f90  sm_xorshift128plus.f90  xoroshiro128plus.c  xorshift1024star.c  xorshift128plus.c
src/searching/: CMakeLists.txt  m_SimpleSearch.f90  m_searching.f90  sm_binarySearch.f90  sm_intervalSearch.f90  t_BinarySearch.f90Template  t_BinarySearch_wNeighbours.f90Template
src/sorting/: CMakeLists.txt  m_select.f90  m_sort.f90  sm_heapSort.f90  sm_insertionSort.f90  sm_insertionSort.f95  sm_introSort.f90  sm_introSort.f95  sm_mergeSort.f90  sm_mergeSort.f95  sm_quickSelect.f90  sm_quickSelect.f95  sm_sort.f90  sm_sort.f95
src/spatial/: CMakeLists.txt  m_KdTree.f90  m_geometry.f90  sm_KdTreeBranch_class.f90  sm_KdTreeSearch_class.f90  sm_KdTreeSearch_class.f95  sm_KdTree_class.f90  sm_geometry.f90
src/tests/: CMakeLists.txt  m_tests.f90  scale_coretran.f90  test_coretran.f90
src/time/: CMakeLists.txt  ProgressBar_Class.f90  Stopwatch_Class.f90  m_time.f90
test/: CMakeLists.txt  test_coretran.f90
tests/src/: CMakeLists.txt  m_tests.f90  scale_coretran.f90  test_coretran.f90  test_libFortran.f90
(+115 files in other folders)
